fix scaling overflow issues

--- a/styles.css
+++ b/styles.css
@@ -160,7 +160,7 @@ h1 {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #d1744f;
+    background-color: #e06a3c;
     transition: 0.3s;
     border-radius: 26px;
 }
@@ -265,12 +265,12 @@ input:checked + .slider:before {
 }
 
 .btn-local {
-    background: #d1744f;
+    background: #e06a3c;
     color: white;
 }
 
 .btn-local:hover:not(:disabled) {
-    background: #b85833;
+    background: #be5932;
 }
 
 .btn-github {
@@ -498,6 +498,11 @@ td {
 }
 
 @media (max-width: 1150px) {
+    .container {
+        max-width: 85%;
+        padding: 10px;
+    }
+
     #heading {
         gap: 1.3rem;
         justify-content: center;
@@ -516,7 +521,7 @@ td {
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 820px) {
     .search-box {
         min-width: 150px;
     }
@@ -529,11 +534,6 @@ td {
     .settings-row input[type="text"],
     .settings-row input[type="password"] {
         min-width: 150px;
-    }
-
-    .container {
-        max-width: 98%;
-        padding: 10px;
     }
 
     .btn {
@@ -549,34 +549,32 @@ td {
 }
 
 @media (max-width: 550px) {
+    .container {
+        max-width: 100%;
+    }
+
     .main-controls {
         gap: 8px;
     }
 
-    .main-controls btn {
-        padding: 6px;
-    }
-
-    .btn:not(#loadBtn, #saveBtn) {
-        padding: 8px 15px;
-        font-size: 13px;
-    }
-
-    .pagination .btn {
-        padding: 10px 10px;
-        font-size: 13px;
+    .mode-label {
+        font-size: 0.8em;
     }
 
     .page-indicator {
-        padding: 0px 8px;
+        padding: 0px 6px;
+        font-size: 12px;
     }
 
     .pagination {
-        font-size: 13px;
+        gap: 8px;
     }
 }
 
 @media (max-width: 450px) {
+    body {
+        padding: 10px;
+    }
     .container {
         padding: 8px;
     }
@@ -599,11 +597,6 @@ td {
         font-size: 13px;
     }
 
-    .pagination {
-        padding: 10px 5px;
-        gap: 8px;
-    }
-
     .pagination-info {
         font-size: 0.8em;
     }
@@ -612,9 +605,8 @@ td {
         gap: 4px;
     }
 
-    .pagination .btn {
-        padding: 6px 8px;
-        font-size: 11px;
+    .btn {
+        font-size: 0.9em;
     }
 
     .page-indicator {
